--- a/dadada/src/Trending_food/trending.css
+++ b/dadada/src/Trending_food/trending.css
@@ -14,3 +14,11 @@
     font-size: 40px;
     margin: 0;
 }
+
+.loo{
+    border-radius: 20px;
+    border-top: 8px solid #ffbd0a;;;
+   
+    width: 100%;
+    margin: 30px;
+}
